Scrubbed, filtered, and analyzed data

--- a/finalPres.ipynb
+++ b/finalPres.ipynb
@@ -2,26 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c4ae6d78",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Works!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import nltk\n",
-    "print(\"Works!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "031e7772",
    "metadata": {},
    "outputs": [
@@ -29,101 +10,152 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total child utterances: 12256\n",
-      "         file age          utterance\n",
-      "0  028(1).cha  06     better . 0_857\n",
-      "1  028(1).cha  06  uhhuh ! 3286_3853\n",
-      "2  028(1).cha  06  uhhuh . 5837_6844\n",
-      "3  028(1).cha  06   mmhm . 7790_8446\n",
-      "4  028(1).cha  06              xxx .\n"
+      "Total English utterances: 11843\n",
+      "         file        group utterance\n",
+      "0  028(1).cha  monolingual  better .\n",
+      "1  028(1).cha  monolingual   uhhuh !\n",
+      "2  028(1).cha  monolingual   uhhuh .\n",
+      "3  028(1).cha  monolingual    mmhm .\n",
+      "4  028(1).cha  monolingual         .\n"
      ]
     }
    ],
    "source": [
-    "#Loading the cha files directly into this pycharm booklet\n",
-    "\n",
-    "import os \n",
-    "import re \n",
-    "import pandas as pd\n",
-    "\n",
+    "import nltk\n",
+    "import pylangacq as pla #program that reads the .cha files\n",
+    "import pandas as pd #will organize the data into an early readable DataFrame\n",
+    "import os #reads file directory paths\n",
     "\n",
     "CHA_DIR = \"/Users/kennedycameron/Downloads/Hoff/\"\n",
     "\n",
-    "cha_files = [f for f in os.listdir(CHA_DIR) if f.endswith(\".cha\")]\n",
+    "files = [os.path.join(CHA_DIR, f) for f in os.listdir(CHA_DIR) if f.endswith(\".cha\")]\n",
+    "#go to the folder that contains the cha files and collect them\n",
     "\n",
     "utterances = []\n",
+    "for f in files:\n",
+    "    chat = pla.read_chat(f)\n",
+    "    name = os.path.basename(f)\n",
+    "    # loop through the files\n",
     "\n",
-    "for filename in cha_files:\n",
-    "    age = None\n",
-    "    filepath = os.path.join(CHA_DIR, filename)\n",
+    "    group = \"monolingual\" if \"(1)\" in name else \"bilingual\"\n",
+    "    #seperating monolingual and bilingual cha files\n",
     "\n",
-    "    with open(filepath, \"r\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
-    "        for line in f:\n",
-    "            line = line.strip()\n",
+    "    for utt in chat.utterances(participants=\"CHI\"):\n",
+    "        lang = getattr(utt, \"language\", None)\n",
+    "        if lang is None or lang == \"eng\":  \n",
+    "            text = \" \".join(tok.word for tok in utt.tokens)\n",
+    "    #pay attention to when the child is speaking, check if they are speaking english\n",
+    "            utterances.append({\n",
+    "                \"file\": name,\n",
+    "                \"group\": group,\n",
+    "                \"utterance\": text\n",
+    "            })\n",
+    "            # storing each usuable English utterance in a list\n",
     "\n",
-    "            if line.startswith(\"@ID:\") and \"CHI\" in line:\n",
-    "                age_match = re.search(r\"\\|\\d;(\\d{2})\\.\", line)\n",
-    "                if age_match:\n",
-    "                    age = age_match.group(1)\n",
     "\n",
-    "            # only grab the lines when the children are speaking\n",
-    "            if line.startswith(\"*CHI:\"):\n",
-    "                utterance = re.sub(r\"\\*[A-Z]+:\\s*\", \"\", line)  \n",
-    "                utterance = utterance.split(\"%\")[0]\n",
-    "\n",
-    "                # remove timestamps and symbols like & and +\n",
-    "                utterance = re.sub(r\"[^\\w\\s\\?\\!\\.\\,áéíóúüñÁÉÍÓÚÜÑ]\", \"\", utterance)\n",
-    "\n",
-    "                # & double spaces\n",
-    "                utterance = re.sub(r\"\\s{2,}\", \" \", utterance).strip()\n",
-    "\n",
-    "                utterances.append({\"file\": filename,\"age\": age, \"utterance\": utterance})\n",
-    " \n",
     "df = pd.DataFrame(utterances)\n",
-    "print(\"Total child utterances:\", len(df))\n",
+    "#convert that list to a dataframe for easy viewing\n",
+    "\n",
+    "#shows how much data we have captures and the head of the dataframe itself\n",
+    "print(\"Total English utterances:\", len(df))\n",
     "print(df.head())\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d53d6548",
+   "id": "c977c94a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "#spaCy's English language model provides part of speech tagging and depenceny parsing so I used to to detect subejects within sentences.\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "#This function analyzes each utterance by\n",
+    "def analyze_subject(utt):\n",
+    "    doc = nlp(utt)\n",
+    "\n",
+    "    has_finite_verb = False\n",
+    "    has_subject = False\n",
+    "\n",
+    "#(a) checking for a finite verb\n",
+    "    for token in doc:\n",
+    "        if token.pos_ in {\"VERB\", \"AUX\"} and token.morph.get(\"VerbForm\") != [\"Inf\"]:\n",
+    "            has_finite_verb = True\n",
+    "#(b) checking for a grammatical subject\n",
+    "        if token.dep_ in {\"nsubj\", \"nsubj:pass\"}:\n",
+    "            has_subject = True\n",
+    "#(c) reporting the findings\n",
+    "    return pd.Series({\n",
+    "        \"has_finite_verb\": has_finite_verb,\n",
+    "        \"has_subject\": has_subject\n",
+    "    })\n",
+    "\n",
+    "#This function is applied to every utterance\n",
+    "subject_info = df[\"utterance\"].apply(analyze_subject)\n",
+    "df_analysis = pd.concat([df, subject_info], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4a4f8cdb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before cleaning: 12256\n",
-      "After cleaning: 9695\n",
-      "          file age            utterance\n",
-      "0   028(1).cha  06            better . \n",
-      "1   028(1).cha  06             uhhuh ! \n",
-      "2   028(1).cha  06             uhhuh . \n",
-      "3   028(1).cha  06              mmhm . \n",
-      "5   028(1).cha  06     I want animals .\n",
-      "6   028(1).cha  06            bridge . \n",
-      "9   028(1).cha  06     I need horsey . \n",
-      "10  028(1).cha  06              uhhuh !\n",
-      "12  028(1).cha  06     I like animals .\n",
-      "13  028(1).cha  06  this one is farm . \n"
+      "file               object\n",
+      "group              object\n",
+      "utterance          object\n",
+      "has_finite_verb      bool\n",
+      "has_subject          bool\n",
+      "dtype: object\n"
      ]
     }
    ],
    "source": [
-    "#Cleaning the children babble as much as possible\n",
-    "print(\"Before cleaning:\", len(df))\n",
-    "df[\"utterance\"] = df[\"utterance\"].str.replace(r\"\\d+_\\d+\", \"\", regex=True)\n",
+    "df_analysis = df_analysis.loc[:, ~df_analysis.columns.duplicated()]\n",
     "\n",
-    "filler_words = {\"uhhuh\",\"mmhm\",\"yeah\",\"um\",\"uh\"}\n",
-    "df = df[~df[\"utterance\"].str.lower().isin(filler_words)]\n",
-    "df = df[~df[\"utterance\"].str.contains(r\"\\bxxx\\b|\\byyy\\b\", regex=True)]\n",
-    "df = df[df[\"utterance\"].str.contains(r\"[A-Za-záéíóúüñÁÉÍÓÚÜÑ]\")]\n",
-    "# & the lines without letters\n",
+    "print(df_analysis.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c4f17c61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finite clauses: 2146\n",
+      "\n",
+      "Summary stats:\n",
+      "             total_clauses  omissions  omission_rate\n",
+      "group                                               \n",
+      "bilingual              760        131       0.172368\n",
+      "monolingual           1386         93       0.067100\n"
+     ]
+    }
+   ],
+   "source": [
+    "finite_df = df_analysis[df_analysis[\"has_finite_verb\"]].copy()\n",
+    "finite_df[\"subject_omitted\"] = ~finite_df[\"has_subject\"]\n",
     "\n",
-    "print(\"After cleaning:\", len(df))\n",
-    "print(df.head(10))\n",
-    "\n"
+    "print(\"Finite clauses:\", len(finite_df))\n",
+    "\n",
+    "summary = finite_df.groupby(\"group\")[\"subject_omitted\"].agg(\n",
+    "    total_clauses=\"count\",\n",
+    "    omissions=\"sum\"\n",
+    ")\n",
+    "summary[\"omission_rate\"] = summary[\"omissions\"] / summary[\"total_clauses\"]\n",
+    "\n",
+    "print(\"\\nSummary stats:\")\n",
+    "print(summary)"
    ]
   }
  ],
