corpus_to_chi_df_v2 now cleans data.
Statistics can also be found at the end.

--- a/Project401.ipynb
+++ b/Project401.ipynb
@@ -93,28 +93,32 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "hre.headers()",
-   "id": "1c5321f6460bccf6",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
-    "def pos_list(files):\n",
-    "     poss = [token.pos for token in files.tokens(participants = 'CHI')]\n",
-    "     return poss"
-   ],
-   "id": "725c3b1ca3d25a8b",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
+    "# Check specific tier contents\n",
+    "pos_set = set()\n",
+    "for utt in hre.utterances():\n",
+    "    for tok in utt.tokens:\n",
+    "        if tok.pos:\n",
+    "            pos_set.add(tok.pos)\n",
+    "pos_set\n",
     "\n",
+    "mor_set = set()\n",
+    "for utt in hre.utterances():\n",
+    "    for tok in utt.tokens:\n",
+    "        if tok.mor:\n",
+    "            mor_set.add(tok.mor.split(\"|\")[0])  # category part\n",
+    "mor_set"
+   ],
+   "id": "debfac506365439e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "def corpus_to_chi_df_v1(corpus):\n",
     "    cols = []\n",
     "    for file_path in corpus.file_paths():\n",
@@ -138,70 +142,12 @@
     "                \"utterance\": text,\n",
     "            })\n",
     "\n",
-    "    return pd.DataFrame(cols)\n",
-    "\n",
-    "corpus_to_chi_df_v1(eng_files)"
+    "    return pd.DataFrame(cols)"
    ],
-   "id": "4bf6d18783cdfba5",
-   "outputs": [],
-   "execution_count": null
+   "id": "a80cbc224f819404"
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "eng_df = corpus_to_chi_df(eng_files)\n",
-    "span_df = corpus_to_chi_df(span_files)\n",
-    "mono_df = corpus_to_chi_df(mono_files)\n",
-    "\n",
-    "#The dependent fields in 2.5 are broken :(\n",
-    "valid_ages = ['3;0', '3;6']\n",
-    "eng_df = eng_df[eng_df['age'].isin(valid_ages)]\n",
-    "span_df = span_df[span_df['age'].isin(valid_ages)]\n",
-    "mono_df = mono_df[mono_df['age'].isin(valid_ages)]\n",
-    "\n"
-   ],
-   "id": "8192db230dae8494"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "pos_set = set()\n",
-    "for utt in hre.utterances():\n",
-    "    for tok in utt.tokens:\n",
-    "        if tok.pos:\n",
-    "            pos_set.add(tok.pos)\n",
-    "pos_set"
-   ],
-   "id": "debfac506365439e",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "mor_set = set()\n",
-    "for utt in hre.utterances():\n",
-    "    for tok in utt.tokens:\n",
-    "        if tok.mor:\n",
-    "            mor_set.add(tok.mor.split(\"|\")[0])  # category part\n",
-    "mor_set"
-   ],
-   "id": "a371cb0124a94d69",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-08T16:23:14.358486Z",
-     "start_time": "2025-12-08T16:23:14.176767Z"
-    }
-   },
    "cell_type": "code",
    "source": [
     "def corpus_to_chi_df_v2(corpus):\n",
@@ -213,6 +159,15 @@
     "        chi_ages = single_file_reader.ages('CHI')\n",
     "        age = chi_ages[0] if chi_ages else None\n",
     "\n",
+    "        # Determine language filter based on file path\n",
+    "        # This will filter out code switching in target language.\n",
+    "        if \"biling-eng\" in file_path:\n",
+    "            exclude_marker = \"[- spa]\"\n",
+    "        elif \"biling-spa\" in file_path:\n",
+    "            exclude_marker = \"[- eng]\"\n",
+    "        else:\n",
+    "            exclude_marker = \"[-RANDOM PHRASE NOT IN TEXTS SUCH AS THIS ONE]\"\n",
+    "\n",
     "        # Iterate over CHI utterances\n",
     "        for utt in single_file_reader.utterances(participants='CHI'):\n",
     "\n",
@@ -223,7 +178,12 @@
     "            if not any(p in (\"verb\", \"aux\") for p in pos):\n",
     "                continue\n",
     "\n",
-    "            words = [tok.word for tok in utt.tokens]  # convert to list of words\n",
+    "            # Only include utterances in target language\n",
+    "            badtext = utt.tiers['CHI']\n",
+    "            if exclude_marker in badtext:\n",
+    "                continue\n",
+    "\n",
+    "            words = [tok.word for tok in utt.tokens]\n",
     "            text = \" \".join(words).strip()\n",
     "\n",
     "            # Determine pronoun-before-verb\n",
@@ -231,15 +191,15 @@
     "            pron_verb_bigram = None\n",
     "\n",
     "            for i, p in enumerate(pos):\n",
-    "                # pronoun–verb bigram\n",
+    "\n",
     "                if p == \"pron\" and i+1 < len(pos) and pos[i+1] in (\"verb\", \"aux\"):\n",
     "                    pronoun_before_verb = True\n",
     "                    pron_verb_bigram = (words[i], words[i+1])\n",
     "                    break\n",
     "\n",
-    "                # any pronoun before first verb\n",
     "                if p in (\"verb\", \"aux\"):\n",
     "                    break\n",
+    "\n",
     "                if p == \"pron\":\n",
     "                    pronoun_before_verb = True\n",
     "\n",
@@ -250,158 +210,73 @@
     "                \"pron_verb_bigram\": pron_verb_bigram\n",
     "            })\n",
     "\n",
-    "    return pd.DataFrame(cols)\n",
-    "\n",
-    "corpus_to_chi_df_v2(eng_files)"
+    "    return pd.DataFrame(cols)\n"
    ],
    "id": "ad8ebd91cda397b2",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-08T19:49:41.540907Z",
+     "start_time": "2025-12-08T19:49:37.245002Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "### PRINT THE RESULTS!\n",
+    "\n",
+    "hoffdataframes = [corpus_to_chi_df_v2(eng_files),\n",
+    "corpus_to_chi_df_v2(span_files),\n",
+    "corpus_to_chi_df_v2(mono_files)]\n",
+    "\n",
+    "group_names = [\"Biling-English\", \"Biling-Spanish\", \"Mono-English\"]\n",
+    "\n",
+    "for name, df in zip(group_names, hoffdataframes):\n",
+    "    counts = df['pronoun_before_verb'].value_counts()\n",
+    "    percent = df['pronoun_before_verb'].value_counts(normalize=True) * 100\n",
+    "\n",
+    "    display_df = pd.DataFrame({\n",
+    "        \"Count\": counts,\n",
+    "        \"Percent\": percent.map(\"{:.1f}%\".format)\n",
+    "    }).reindex([True, False])\n",
+    "\n",
+    "    print(f\"--- {name} Group ---\")\n",
+    "    print(display_df)\n",
+    "    print(\"\\n\")"
+   ],
+   "id": "f26ebc1324d9d6f8",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "            age                 utterance  pronoun_before_verb  \\\n",
-       "0     (2, 6, 0)         a ver los patos .                False   \n",
-       "1     (2, 6, 0)                   llama .                False   \n",
-       "2     (2, 6, 0)                 pon eso .                False   \n",
-       "3     (2, 6, 0)                 take it .                False   \n",
-       "4     (2, 6, 0)                  put it ?                False   \n",
-       "...         ...                       ...                  ...   \n",
-       "7093  (3, 0, 0)   esto se está acabando .                 True   \n",
-       "7094  (3, 0, 0)         podemos también ?                False   \n",
-       "7095  (3, 0, 0)                 I like /.                 True   \n",
-       "7096  (3, 0, 0)  esto no se puede bajar .                 True   \n",
-       "7097  (3, 0, 0)      eso está muy sucio .                 True   \n",
-       "\n",
-       "     pron_verb_bigram  \n",
-       "0                None  \n",
-       "1                None  \n",
-       "2                None  \n",
-       "3                None  \n",
-       "4                None  \n",
-       "...               ...  \n",
-       "7093       (se, está)  \n",
-       "7094             None  \n",
-       "7095        (I, like)  \n",
-       "7096      (se, puede)  \n",
-       "7097      (eso, está)  \n",
-       "\n",
-       "[7098 rows x 4 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>utterance</th>\n",
-       "      <th>pronoun_before_verb</th>\n",
-       "      <th>pron_verb_bigram</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(2, 6, 0)</td>\n",
-       "      <td>a ver los patos .</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>(2, 6, 0)</td>\n",
-       "      <td>llama .</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(2, 6, 0)</td>\n",
-       "      <td>pon eso .</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(2, 6, 0)</td>\n",
-       "      <td>take it .</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>(2, 6, 0)</td>\n",
-       "      <td>put it ?</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7093</th>\n",
-       "      <td>(3, 0, 0)</td>\n",
-       "      <td>esto se está acabando .</td>\n",
-       "      <td>True</td>\n",
-       "      <td>(se, está)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7094</th>\n",
-       "      <td>(3, 0, 0)</td>\n",
-       "      <td>podemos también ?</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7095</th>\n",
-       "      <td>(3, 0, 0)</td>\n",
-       "      <td>I like /.</td>\n",
-       "      <td>True</td>\n",
-       "      <td>(I, like)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7096</th>\n",
-       "      <td>(3, 0, 0)</td>\n",
-       "      <td>esto no se puede bajar .</td>\n",
-       "      <td>True</td>\n",
-       "      <td>(se, puede)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7097</th>\n",
-       "      <td>(3, 0, 0)</td>\n",
-       "      <td>eso está muy sucio .</td>\n",
-       "      <td>True</td>\n",
-       "      <td>(eso, está)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7098 rows × 4 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Biling-English Group ---\n",
+      "                     Count Percent\n",
+      "pronoun_before_verb               \n",
+      "True                  4050   65.1%\n",
+      "False                 2170   34.9%\n",
+      "\n",
+      "\n",
+      "--- Biling-Spanish Group ---\n",
+      "                     Count Percent\n",
+      "pronoun_before_verb               \n",
+      "True                  2544   43.3%\n",
+      "False                 3333   56.7%\n",
+      "\n",
+      "\n",
+      "--- Mono Group ---\n",
+      "                     Count Percent\n",
+      "pronoun_before_verb               \n",
+      "True                  3835   70.1%\n",
+      "False                 1639   29.9%\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 57
   }
  ],
  "metadata": {
