--- a/finalPres.ipynb
+++ b/finalPres.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "import spacy\n",
-    "#spaCy's English language model provides part of speech tagging and depenceny parsing so I used to to detect subejects within sentences.\n",
+    "#spaCy's English language model provides part of speech tagging and depenceny parsing so I used that to detect subejects within sentences.\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "#This function analyzes each utterance by\n",
@@ -98,8 +98,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11151bad",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "4a4f8cdb",
    "metadata": {},
    "outputs": [
@@ -124,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "c4f17c61",
    "metadata": {},
    "outputs": [
